--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
 
             # Create environment file for production
             cat > .env << 'EOF'
-            VITE_API_BASE_URL=${{ secrets.VITE_API_URL }}
+            VITE_API_URL=${{ secrets.VITE_API_URL }}
             EOF
 
             # Install dependencies and build
